objects/tspa__visual_journey_session_type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>tspa__Is_Language_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Language active or Inactive control.</description>
        <label>Is Language Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Language__c</fullName>
        <label>Language</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Modified_Value__c</fullName>
        <label>Modified Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Original_Value__c</fullName>
        <label>Original Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Tablet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__alias__c</fullName>
        <label>alias</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Visual Remote Assistant - Visual Journey</label>
    <listViews>
        <fullName>tspa__All_Flows</fullName>
        <columns>NAME</columns>
        <columns>tspa__Original_Value__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>